tasks ejler largest prime factor.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>EjlerTasks</title>
-    <script src="tasksEjler/Fibonacci-2.js"></script>
+    <script src="tasksEjler/Multiples-1.js"></script>
 </head>
 <body>
 
